--- a/styles.css
+++ b/styles.css
@@ -258,6 +258,11 @@ a {
     display: block;
 }
 
+.feature-icon svg {
+    width: 3.5rem;
+    height: 3.5rem;
+}
+
 /* Experimentation Section */
 .experiment {
     background-color: var(--secondary-bg);
@@ -323,6 +328,7 @@ a {
     gap: 1rem;
     justify-content: center;
     align-items: center;
+    margin-bottom: 1rem;
 }
 
 @media (min-width: 768px) {
